adding mars rover kata

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>roman-numeral</module>
         <module>fizz-buzz</module>
+        <module>mars-rover</module>
     </modules>
 
     <build>
