--- a/mars-rover/pom.xml
+++ b/mars-rover/pom.xml
@@ -13,6 +13,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.google.auto.value</groupId>
+            <artifactId>auto-value</artifactId>
+            <version>${auto-value.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
@@ -27,6 +33,7 @@
     </dependencies>
 
     <properties>
+        <auto-value.version>1.0-rc4</auto-value.version>
         <junit.version>4.11</junit.version>
         <hamcrast.version>1.3</hamcrast.version>
     </properties>
