--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <modules>
-        <module>roman-numeral</module>
+        <module>roman-numerals</module>
         <module>fizz-buzz</module>
         <module>mars-rover</module>
         <module>tennis-game</module>
