--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>mars-rover</module>
         <module>tennis-game</module>
         <module>lsc-kata</module>
+        <!--<module>bsc-kata</module>-->
+        <module>shopping-cart-kata</module>
     </modules>
 
     <build>
