--- a/advent-of-code/advent-of-code-day-1/pom.xml
+++ b/advent-of-code/advent-of-code-day-1/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>day1-first</artifactId>
+    <artifactId>day1</artifactId>
 
 
 </project>
